--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "body-scroll-lock": "^4.0.0-beta.0",
-    "eslint": "8.31.0",
-    "eslint-config-next": "13.1.2",
     "next": "13.1.2",
     "next-fonts": "^1.5.1",
     "react": "18.2.0",
@@ -24,6 +22,11 @@
   },
   "devDependencies": {
     "classnames": "2.3.2",
+    "eslint": "^8.32.0",
+    "eslint-config-next": "^13.1.3",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.3",
     "sass": "1.57.1"
   }
 }
