--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
     "classnames": "2.3.2",
     "eslint": "^8.32.0",
     "eslint-config-next": "^13.1.3",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-standard": "^5.0.0",
     "prettier": "^2.8.3",
     "sass": "1.57.1"
   }
