config: update and implement eslint config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,11 +3,7 @@
     "browser": true,
     "es2021": true
   },
-  "extends": [
-    "next/core-web-vitals",
-    "plugin:@typescript-eslint/recommended",
-    "plugin:prettier/recommended"
-  ],
+  "extends": "next/core-web-vitals",
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaFeatures": {
@@ -23,7 +19,8 @@
     "prettier",
     "import",
     "promise",
-    "standard"
+    "standard",
+    "node"
   ],
   "overrides": [
     {
