--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "eslint": "^8.32.0",
     "eslint-config-next": "^13.1.3",
     "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-standard": "^5.0.0",
