--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,9 @@
       "@components/*": [
         "src/components/*"
       ],
+      "@styles/*": [
+        "src/styles/*"
+      ],
       "@api/*": [
         "api/*"
       ],
