--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,12 @@
       "@styles/*": [
         "src/styles/*"
       ],
+      "@hooks/*": [
+        "src/hooks/*"
+      ],
+      "@shared/*": [
+        "src/shared/*"
+      ],
       "@public/*": [
         "public/*"
       ],
