--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next-fonts": "^1.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-faq-component": "^1.3.4",
     "typescript": "4.9.4"
   },
   "devDependencies": {
