--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,8 +25,8 @@
       "@hooks/*": [
         "src/hooks/*"
       ],
-      "@shared/*": [
-        "src/shared/*"
+      "@common/*": [
+        "src/common/*"
       ],
       "@public/*": [
         "public/*"
