feature: add helper isEven and refactor translate animation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,9 @@
       "@hooks/*": [
         "src/hooks/*"
       ],
+      "@helpers/*": [
+        "src/helpers/*"
+      ],
       "@common/*": [
         "src/common/*"
       ],
